--- a/adobe.html
+++ b/adobe.html
@@ -51,7 +51,7 @@
                 <p id="forprog"><img weight="80" height="100" src="images/aftereff.png" alt=""><br>Adobe After Effects 2023</br><br>Программа для создавания анимаций, является помощником к Adobe Premiere Pro 2023</br><a href="https://m.moreigr.com/uploads/torrent/Adobe-After-Effects-2023.torrent">Скачать</a></p>
       </div></center>
       
-      <center><h5>TheDanyaWin Production ℗ 2021-2023</h5></center>
-        <center><h5>Version: 4.1a. codename: Flourite</h5></center>
+      <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
+      <center><h5>Version: 5.0; codename: Revival.</h5></center>
 </body>
 </html>
