--- a/donaters.html
+++ b/donaters.html
@@ -33,22 +33,21 @@
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50">
     <center><h1 id="textprog">Донатеры</h1></center>
+    <CENter><H2>ЛИДЕРЫ ПО ДОНАТАМ: <BR>Kirill - Gorev: 1266RUB!! + игры в стиме</BR><BR>WinXPUser04: 300RUB!!</BR><BR>Danchik: 250RUB</BR></H2></CENter>
         <center><h3>Я посчитал всех подписчиков кто задонатил мне, спасибо за вашу поддержку! ❤️</h3></center>
-        <center><h3>(тут показана общее количество сколько человек задонатил)</h3></center>
+        <center><h3>(тут показано общее количество, сколько человек задонатил)</h3></center>
 
     <div class="programs">
         <center>
-                <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Именные донаты<br>Kirill - Gorev: 554RUB. Danchik:250RUB. NikeTa: 200RUB. Gminsky: 100RUB. Лёпешка: 10RUB. The Ertor: 5RUB. Nerok: 3RUB. йожик: 1RUB <br>
+                <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Именные донаты<br>Лидер: Kirill - Gorev: 1266RUB. 2 место: WinXPUser04: 300RUB. 3 место: Danchik:250RUB. NikeTa: 200RUB. Gminsky: 100RUB. YetWin: 17RUB Лёпешка: 10RUB. The Ertor: 5RUB. Nerok: 3RUB. йожик: 1RUB <br>
                 <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Анонимные<br>50RUB - Анонимные пользователи<br>
                 <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Донаты по QIWI<br>YetWin - 16RUB<br> 
                     <H1>Хочешь быть одним из них?</H1>
-                    <H2>Nickname QIWI: THEDANYAWIN</H2>
         <button class="btn" ><a href="https://new.donatepay.ru/@thedanyawin">DonatePay</a></button>
         <button class="btn" ><a href="https://www.donationalerts.com/r/superuno">DonationAlerts</a></button>
-        <button class="btn" ><a href="https://qiwi.com/payment/form/99999">QIWI</a></button>  
       </div></center>
       
-      <center><h5>TheDanyaWin Production ℗ 2021-2023.</h5></center>
-        <center><h5>Version: 4.1a. codename: Flourite.</h5></center>
+      <center><h5>TheDanyaWin ℗ 2021-2024.</h5></center>
+        <center><h5>Version: 5.0; codename: Revival.</h5></center>
 </body>
 </html>
