--- a/info.html
+++ b/info.html
@@ -66,15 +66,15 @@
 
 
 
-  <center><h3 id="info"><br>Информация о сайте:</br><br>Сайт был сделан ещё в 2022, помогал <a href="">Nerok</a>, за что ему огромное спасибо :3. Также хочу выразить благодарность Maydilsiel, так как с помощью него я перешёл на HTML</br></h3></center>
+  <center><h3 id="info"><br>Информация обо мне:</br><br>Привет! Меня зовут Даня, люблю копаться в железках и разном ПО. Моё начало на ютубе было в 2018 году, тогда я ещё не знал до чего всё дойдёт, снимая Minecraft и Brawl Stars. В 2021 задумался о контенте компьютерных железяк и Windows, к чему я сейчас и пришёл. </br><br>Мой конфиг ПК: Xeon E5-2650V2; 16GB DDR3; GTX 1070</br></h3></center>
 
   <center><h3 id="info"><br>Контакты/Социальные сети:</br><br><a href="https://openvk.su/id9304">OpenVK</a> <a href="https://t.me/thedanyawintg">Telegram</a> <a href="https://discord.gg/xetdSJ2rFK">Discord</a></br></h3></center>
 
-  <center><h3 id="info"><br>Changelog:</br><br>Версия 4.1a. codename: Flourite: Изменён фон на CSS-Градиент. Добавлены фильтры в программы. Больше стилей-CSS. Добавлена анимация к страницам, а у главной страницы отдельная анимация.</br><br>Версия 4.0a: Полный переезд на HTML+CSS</br></h3></center>
+  <center><h3 id="info"><br>Changelog:</br><br>Версия 5.0; codename: Revival: Изменение фона. Изменения значка на главной. Обновлённая информация на страницах. Была сменена анимация при заходе на сайт, так как это вызывало баги.</br><br>Версия 4.1a. codename: Flourite: Изменён фон на CSS-Градиент. Добавлены фильтры в программы. Больше стилей-CSS. Добавлена анимация к страницам, а у главной страницы отдельная анимация.</br><br>Версия 4.0a: Полный переезд на HTML+CSS</br></h3></center>
 
-    <center><h5>TheDanyaWin Production ℗ 2021-2023</h5></center>
+    <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
 
-<center><h5>Version: 4.1a. codename: Flourite</h5></center>
+<center><h5>Version: 5.0; codename: Revival</h5></center>
 
 </body>
 
