--- a/programs.html
+++ b/programs.html
@@ -37,10 +37,8 @@
         <center><h3>Категория: Утилиты и прочее</h3></center>
 
     <div> <center>
-        <button class="btn" ><a href="ops.html">Полезное</a></button>
         <button class="btn" ><a href="userprograms.html">Предложенные</a></button>
         <button class="btn" ><a href="adobe.html">Adobe Programs</a></button>
-        <button class="btn" ><a href="ops.html">Общее</a></button>
     </div></center>
 
     <div class="programs">
@@ -52,7 +50,7 @@
                 <p id="forprog"><img weight="80" height="100" src="images/gpu-z.png" alt=""><br>GPU-Z</br><br>Показывает характеристики вашей видеокарты, в том числе и версию BIOS</br><a href="https://www.henrypp.org/product/memreduct">Скачать</a></p>
       </div></center>
       
-      <center><h5>TheDanyaWin Production ℗ 2021-2023</h5></center>
-        <center><h5>Version: 4.1a. codename: Flourite</h5></center>
+      <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
+      <center><h5>Version: 5.0; codename: Revival.</h5></center>
 </body>
 </html>
