--- a/userprograms.html
+++ b/userprograms.html
@@ -48,7 +48,7 @@
             <H2 id="forprog">На данный момент тут ничего нету. Предложить программу можно <a href="https://t.me/TheDanyaWin">тут</a></H2>
       </div></center>
       
-      <center><h5>TheDanyaWin Production ℗ 2021-2023</h5></center>
-        <center><h5>Version: 4.1a. codename: Flourite</h5></center>
+      <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
+      <center><h5>Version: 5.0; codename: Revival.</h5></center>
 </body>
 </html>
