--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
         <center><h2>Добро пожаловать на мой сайт, теперь написанный на HTML</h2></center>
             <center><h3>Последнее видео:</h2></center>
                 <center><iframe width="560" height="315" src="https://www.youtube.com/embed/rGYrW050YrE?si=AWTTnv-ig0-gfTbc" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="youtube"></iframe></center>
-            <center><h2>Всем привет! Меня зовут <a href="https://www.youtube.com/@omagadtdw"</a>, снимаю об Windows, рассказываю о ней и так далее.</h2></center>
+            <center><h2>Всем привет! Меня зовут <a href="https://www.youtube.com/@omagadtdw">TheDanyaWin</a>, снимаю об Windows, рассказываю о ней и так далее.</h2></center>
             
             <div>
             <center><h3>Сайты моих друзей/знакомых:</h3>
