--- a/adobe.html
+++ b/adobe.html
@@ -29,6 +29,7 @@
         <button class="btn" ><a href="info.html">Инфо. о сайте</a></button>
         <button class="btn" ><a href="programs.html">Программы</a></button>
         <button class="btn" ><a href="donaters.html">Донатеры</a></button>
+        <button class="btn" ><a href="image.html">Сборки</a></button>
         </center>
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50" title="Back">
@@ -37,10 +38,8 @@
         <center><h3>Категория: Adobe Programs</h3></center>
 
     <div> <center>
-        <button class="btn" ><a href="ops.html">Полезное</a></button>
         <button class="btn" ><a href="userprograms.html">Предложенные</a></button>
         <button class="btn" ><a href="adobe.html">Adobe Programs</a></button>
-        <button class="btn" ><a href="ops.html">Общее</a></button>
     </div></center>
 
     <div class="programs">
@@ -51,7 +50,7 @@
                 <p id="forprog"><img weight="80" height="100" src="images/aftereff.png" alt=""><br>Adobe After Effects 2023</br><br>Программа для создавания анимаций, является помощником к Adobe Premiere Pro 2023</br><a href="https://m.moreigr.com/uploads/torrent/Adobe-After-Effects-2023.torrent">Скачать</a></p>
       </div></center>
       
-      <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
-      <center><h5>Version: 5.0; codename: Revival.</h5></center>
+      <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
+      <center><h3>Version: 5.3; codename: Revival.</h3></center>
 </body>
 </html>
