--- a/donaters.html
+++ b/donaters.html
@@ -29,6 +29,7 @@
         <button class="btn" ><a href="info.html">Инфо. о сайте</a></button>
         <button class="btn" ><a href="programs.html">Программы</a></button>
         <button class="btn" ><a href="donaters.html">Донатеры</a></button>
+        <button class="btn" ><a href="image.html">Сборки</a></button>
         </center>
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50">
@@ -39,7 +40,7 @@
 
     <div class="programs">
         <center>
-                <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Именные донаты<br>Лидер: Kirill - Gorev: 1266RUB. 2 место: WinXPUser04: 300RUB. 3 место: Danchik:250RUB. NikeTa: 200RUB. Gminsky: 100RUB. YetWin: 17RUB Лёпешка: 10RUB. The Ertor: 5RUB. Nerok: 3RUB. йожик: 1RUB <br>
+                <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Именные донаты<br>Лидер: Kirill - Gorev: 1266RUB.<br> 2 место: WinXPUser04: 300RUB. <br> 3 место: Danchik:250RUB. <br> NikeTa: 200RUB. <br> Gminsky: 100RUB. <br> YetWin: 17RUB <br> Лёпешка: 10RUB. <br> The Ertor: 5RUB. <br> Nerok: 3RUB. <br> йожик: 1RUB <br>
                 <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Анонимные<br>50RUB - Анонимные пользователи<br>
                 <p style="border: 3px solid #000000; background-color: #0000006b; padding: 10px;">Донаты по QIWI<br>YetWin - 16RUB<br> 
                     <H1>Хочешь быть одним из них?</H1>
@@ -47,7 +48,7 @@
         <button class="btn" ><a href="https://www.donationalerts.com/r/superuno">DonationAlerts</a></button>
       </div></center>
       
-      <center><h5>TheDanyaWin ℗ 2021-2024.</h5></center>
-        <center><h5>Version: 5.0; codename: Revival.</h5></center>
+      <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
+      <center><h3>Version: 5.3; codename: Revival.</h3></center>
 </body>
 </html>
