--- a/image.html
+++ b/image.html
@@ -33,19 +33,21 @@
         </center>
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50" title="Back">
-    <center><h1 id="textprog">Программы</h1></center>
-        <center><h3>Программы предложенные пользователями сайта</h3></center>
-        <center><h3>Категория: Предложка</h3></center>
-
-    <div> <center>
-        <button class="btn" ><a href="userprograms.html">Предложенные</a></button>
-        <button class="btn" ><a href="adobe.html">Adobe Programs</a></button>
-    </div></center>
+    <center><h1 id="textprog">Сборки от Дани</h1></center>
+        <center><h3>На данный момент в разработке TheWin11 на базе Windows 11 22h2, вскоре он появится на сайте</h3></center>
 
     <div class="programs">
         <center>
-            <H2 id="forprog">На данный момент тут ничего нету. Предложить программу можно <a href="https://t.me/TheDanyaWin">тут</a></H2>
-      </div></center>
+                <p id="forprog"><img weight="80" height="100" src="images/win10.png" alt=""><br>TheWinGO на основе Windows 10 22H2</br><br>Сборка с вырезанными ненужными элементами UWP, облегчённая 10 Pro, поставляется с папкой "Programs and Wallpapers" в которой есть установщики программ и выбор красивых обоев.</br><a href="https://www.videolan.org/vlc/index.ru.html">Скачать</a></p> 
+    </div></center>
+
+    <center><h1>Нестабильные сборки TheWin</h1></center>
+    <center><h2>В данный список входят сборки, которые нестабильно работали на компьютерах и не рекомендуемые для использования</h2></center>
+    <div class="programs">
+        <center>
+                <p id="forprog"><img weight="80" height="100" src="images/win10not.png" alt=""><br>TheWin на основе Windows 10 22H2</br><br>Тоже самое что TheWinGO, но с присутствием всех UWP приложений, но нестабильной работой и проблемами, не рекомендуется.</br><a href="https://drive.google.com/file/d/1I2pCrfXavdrNTG7pP-M6igAqQ5eCjNf6/view?usp=drive_link">Скачать</a></p> 
+    </div></center>
+    
       
       <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
       <center><h3>Version: 5.3; codename: Revival.</h3></center>
