--- a/info.html
+++ b/info.html
@@ -58,23 +58,24 @@
 
         <button class="btn" ><a href="donaters.html">Донатеры</a></button>
 
-        </center>
+        <button class="btn" ><a href="image.html">Сборки</a></button>
 
+        </center>
         
 
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50">
 
 
 
-  <center><h3 id="info"><br>Информация обо мне:</br><br>Привет! Меня зовут Даня, люблю копаться в железках и разном ПО. Моё начало на ютубе было в 2018 году, тогда я ещё не знал до чего всё дойдёт, снимая Minecraft и Brawl Stars. В 2021 задумался о контенте компьютерных железяк и Windows, к чему я сейчас и пришёл. </br><br>Мой конфиг ПК: Xeon E5-2650V2; 16GB DDR3; GTX 1070</br></h3></center>
+  <center><h3 id="info"><br>Информация обо мне:</br><br>Привет! Меня зовут Даня, люблю копаться в железках и разном ПО. <br> Моё начало на ютубе было в 2018 году, тогда я ещё не знал до чего всё дойдёт, снимая Minecraft и Brawl Stars. <br> В 2021 задумался о контенте компьютерных железяк и Windows, к чему я сейчас и пришёл. <br> В 2024 пересоздал канал, сейчас мой канал набрал 110+ подписчиков. </br><br>Мой конфиг ПК: Xeon E5-2650V2; 16GB DDR3; GTX 1070</br></h3></center> 
+  <center><h3 id="info"><br>Как встроить мой баннер на свой сайт?<br>Для этого нужно встроить в свой сайт данный код:<br><textarea disabled="" rows="3" cols="60" name="text">&lt;a href="https://thedanyawin.github.io/thedanyaworld/"&gt;&lt;img src="https://thedanyawin.github.io/thedanyaworld/images/tdworld-banner.gif" width="88px" height="31px" alt="TDWorld" /&gt;&lt;/a&gt;</textarea><br><a href="https://thedanyawin.github.io/thedanyaworld/"><img src="https://thedanyawin.github.io/thedanyaworld/images/tdworld-banner.gif" width="88px" height="31px"></a>
+  
+  <center><h3 id="info"><br>Контакты/Социальные сети:</br> <a href="https://openvk.su/id9304">OpenVK</a> <a href="https://t.me/thedanyawintg">Telegram</a> <a href="https://discord.gg/xetdSJ2rFK">Discord</a></br></h3></center>
 
-  <center><h3 id="info"><br>Контакты/Социальные сети:</br><br><a href="https://openvk.su/id9304">OpenVK</a> <a href="https://t.me/thedanyawintg">Telegram</a> <a href="https://discord.gg/xetdSJ2rFK">Discord</a></br></h3></center>
+  <center><h4 id="info"><br>Changelog:</br><br>Версия 5.3:<br>Добавлена инструкция как добавить баннер моего сайта. Поправлен текст, теперь он более красивый. Обновлена информация о себе. Добавлена вкладка с сборками, где можно скачать все мои доступные сборки. Изменены рандомные факты.</br><br>Версия 5.0; codename: Revival: <br> Изменение фона. Изменения значка на главной. Обновлённая информация на страницах. Была сменена анимация при заходе на сайт, так как это вызывало баги.</br><br>Версия 4.1a. codename: Flourite: <br> Изменён фон на CSS-Градиент. Добавлены фильтры в программы. Больше стилей-CSS. Добавлена анимация к страницам, а у главной страницы отдельная анимация.</br><br>Версия 4.0a: <br> Полный переезд на HTML+CSS</br></h4></center>
 
-  <center><h3 id="info"><br>Changelog:</br><br>Версия 5.0; codename: Revival: Изменение фона. Изменения значка на главной. Обновлённая информация на страницах. Была сменена анимация при заходе на сайт, так как это вызывало баги.</br><br>Версия 4.1a. codename: Flourite: Изменён фон на CSS-Градиент. Добавлены фильтры в программы. Больше стилей-CSS. Добавлена анимация к страницам, а у главной страницы отдельная анимация.</br><br>Версия 4.0a: Полный переезд на HTML+CSS</br></h3></center>
-
-    <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
-
-<center><h5>Version: 5.0; codename: Revival</h5></center>
+  <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
+  <center><h3>Version: 5.3; codename: Revival.</h3></center>
 
 </body>
 
