--- a/programs.html
+++ b/programs.html
@@ -29,6 +29,7 @@
         <button class="btn" ><a href="info.html">Инфо. о сайте</a></button>
         <button class="btn" ><a href="programs.html">Программы</a></button>
         <button class="btn" ><a href="donaters.html">Донатеры</a></button>
+        <button class="btn" ><a href="image.html">Сборки</a></button>
         </center>
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50" title="Back">
@@ -50,7 +51,7 @@
                 <p id="forprog"><img weight="80" height="100" src="images/gpu-z.png" alt=""><br>GPU-Z</br><br>Показывает характеристики вашей видеокарты, в том числе и версию BIOS</br><a href="https://www.henrypp.org/product/memreduct">Скачать</a></p>
       </div></center>
       
-      <center><h5>TheDanyaWin ℗ 2021-2024</h5></center>
-      <center><h5>Version: 5.0; codename: Revival.</h5></center>
+      <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
+      <center><h3>Version: 5.3; codename: Revival.</h3></center>
 </body>
 </html>
