--- a/image.html
+++ b/image.html
@@ -30,26 +30,28 @@
         <button class="btn" ><a href="programs.html">Программы</a></button>
         <button class="btn" ><a href="donaters.html">Донатеры</a></button>
         <button class="btn" ><a href="image.html">Сборки</a></button>
+        <button class="btn" ><a href="keywin.html">Ключи</a></button>
         </center>
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50" title="Back">
     <center><h1 id="textprog">Сборки от Дани</h1></center>
-        <center><h3>На данный момент в разработке TheWin11 на базе Windows 11 22h2, вскоре он появится на сайте</h3></center>
+        <center><h3>TheWin11 уже тут!</h3></center>
 
     <div class="programs">
         <center>
-                <p id="forprog"><img weight="80" height="100" src="images/win10.png" alt=""><br>TheWinGO на основе Windows 10 22H2</br><br>Сборка с вырезанными ненужными элементами UWP, облегчённая 10 Pro, поставляется с папкой "Programs and Wallpapers" в которой есть установщики программ и выбор красивых обоев.</br><a href="https://www.videolan.org/vlc/index.ru.html">Скачать</a></p> 
+                <p id="forprog"><img weight="80" height="100" src="images/win11.png" alt=""><br>TheWin11 Lite на основе Windows 11 22H2 (19.06.2024)</br><br>В данной сборке есть папка "От Дани", где поставляются разного рода программы и обои, например обои от MacOS и прочие. <br> Также сборка исбавлена от ненужных UWP приложений, но если вам нужно будет ещё что-то вырезать, то в сборке есть папка с Dism++ (только для опытных пользователей)</br><a href="https://drive.google.com/file/d/1yhA-G6--Bc0pysNwKq2f8_npvKoboI6N/view?usp=sharing">Скачать</a></p>
+                <p id="forprog"><img weight="80" height="100" src="images/win10.png" alt=""><br>TheWinGO на основе Windows 10 22H2 (15.01.2023)</br><br>Сборка с вырезанными ненужными элементами UWP, облегчённая 10 Pro, поставляется с папкой "Programs and Wallpapers" в которой есть установщики программ и выбор красивых обоев.</br><a href="https://drive.google.com/file/d/1FBs8LLObozb3LfMhj6UXkEhfTq92d3qO/view?usp=drive_link">Скачать</a></p>  
     </div></center>
 
     <center><h1>Нестабильные сборки TheWin</h1></center>
     <center><h2>В данный список входят сборки, которые нестабильно работали на компьютерах и не рекомендуемые для использования</h2></center>
     <div class="programs">
         <center>
-                <p id="forprog"><img weight="80" height="100" src="images/win10not.png" alt=""><br>TheWin на основе Windows 10 22H2</br><br>Тоже самое что TheWinGO, но с присутствием всех UWP приложений, но нестабильной работой и проблемами, не рекомендуется.</br><a href="https://drive.google.com/file/d/1I2pCrfXavdrNTG7pP-M6igAqQ5eCjNf6/view?usp=drive_link">Скачать</a></p> 
+                <p id="forprog"><img weight="80" height="100" src="images/win10not.png" alt=""><br>TheWin на основе Windows 10 22H2 (14.01.2023)</br><br>Тоже самое что TheWinGO, но с присутствием всех UWP приложений, но нестабильной работой и проблемами, не рекомендуется.</br><a href="https://drive.google.com/file/d/1I2pCrfXavdrNTG7pP-M6igAqQ5eCjNf6/view?usp=drive_link">Скачать</a></p> 
     </div></center>
     
       
       <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
-      <center><h3>Version: 5.3; codename: Revival.</h3></center>
+      <center><h3>Version: 5.6; codename: Revival.</h3></center>
 </body>
 </html>
