--- a/donaters.html
+++ b/donaters.html
@@ -30,6 +30,7 @@
         <button class="btn" ><a href="programs.html">Программы</a></button>
         <button class="btn" ><a href="donaters.html">Донатеры</a></button>
         <button class="btn" ><a href="image.html">Сборки</a></button>
+        <button class="btn" ><a href="keywin.html">Ключи</a></button>
         </center>
     </div>
 <img src="images/back.png" alt="" onclick="history.back();" id="backbut" width="50" height="50">
@@ -49,6 +50,6 @@
       </div></center>
       
       <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
-      <center><h3>Version: 5.3; codename: Revival.</h3></center>
+      <center><h3>Version: 5.6; codename: Revival.</h3></center>
 </body>
 </html>
