--- a/index.html
+++ b/index.html
@@ -30,6 +30,7 @@
       <button class="btn" ><a href="donaters.html">Донатеры</a></button>
       <button class="btn" ><a href="image.html">Сборки</a></button>
       <button class="btn" ><a href="keywin.html">Ключи</a></button>
+      <button class="btn" ><a href="other.html">Другое</a></button>
       </center>
   </div>
     
@@ -38,13 +39,20 @@
 
         <center><h2>Добро пожаловать на мой сайт! Сборка TheWin11 уже во вкладке "Сборки"!</h2></center>
             <center><h3>Последнее видео:</h2></center>
-                <center><iframe width="560" height="315" src="https://www.youtube.com/embed/X9UPTDwDTT4?si=BSp_Bs3cL4LuGPGA" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" allowfullscreen id="youtube"></iframe></center>
+                <center><iframe width="560" height="315" src="https://www.youtube.com/embed/_xYdySTzp2Q?si=ROVy_faDZYR4ylpd" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe></center>
             <center><h2>Всем привет! Меня зовут <a href="https://www.youtube.com/@omagadtdw">TheDanyaWin</a>, снимаю об Windows, рассказываю о ней и так далее.</h2></center>
             
             <div>
             <center><h3>Сайты моих друзей/знакомых:</h3>
-              <center><h3>Упс! Видимо пока что тут никого нету, если ты хочешь чтобы твой баннер попал сюда, то напиши в личку <a href="https://t.me/thedanyawin">Telegram</a></h3>
+                <a href="https://rivixal.github.io"><img src="images/rivixalbanner.png" width="88px" height="31px" alt="rivixal" /></a>
+                <a href="https://ertorworld.com"><img src="images/banner.png" width="88px" height="31px"></a>
+                <a href="https://ost-sys.github.io"><img src="https://ost-sys.github.io/assets/images/ost.png" alt="OST"/></a>
+                <a href="https://lisikpng.com/"><img src="https://lisikpng.com/img/websbn.png" width="88px" height="31px"></a> 
+                <a href="http://alivew.net"><img src="http://static.alivew.net/data/bannernew.png" width="88" height="31" border="0" ></а>
+                <a href="https://myslivets.com/"><img src="images/myslivets-banner.png" alt="Daniel Myslivets" width="88" height="31"></a>
+
+              <center><h3>Хочешь увидить себя здесь? Пиши мне в личку <a href="https://t.me/thedanyawin">Telegram</a></h3>
              <center><h3 style="color: rgb(255, 255, 255);">TheDanyaWin ℗ 2021-2024</h3></center>
-        <center><h3>Version: 5.6; codename: Revival.</h3></center>
+             <center><h3>Version: 6.0</h3></center>
 </body>
 </html>
